# CueMe

./: .cache  .env.example  .flaskenv  .gitignore  README.md  pyproject.toml
app/: __init__.py  config.py
app/forms/: login_form.py  registration_form.py
app/ml/: PlaylistGenerator.py  playlist_generator.py  train_model.py
app/models/: __init__.py  db.py  playlist.py  playlist_song.py  playlist_track.py  song.py  track.py  user.py
app/routes/: __init__.py  auth.py  playlist.py
app/services/: spotify_service.py
frontend/: .prettierignore  .prettierrc  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  index.css  main.tsx  router.tsx
frontend/src/components/auth/: AuthPage.tsx  LoginForm.tsx  RegistrationForm.tsx
frontend/src/components/ui/: NavLink.tsx  ThemeToggle.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/hooks/: useAuth.ts  useTheme.ts
frontend/src/pages/: AuthPage.tsx  CreatePlaylist.tsx  Dashboard.tsx  ManagePlaylists.tsx  NotFound.tsx  PlaylistDetail.tsx  UserProfile.tsx
frontend/src/store/: auth.ts  theme.ts
migrations/versions/: 06cf8e73f30f_create_users_table.py  2b8073e7d715_create_songs_table.py  2b8073e7d715_create_tracks_table.py  38115c3e576c_create_playlists_table.py  974945f1f48a_create_playlist_songs_table.py  974945f1f48a_create_playlist_tracks_table.py
